--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     ></script>
 </head>
 <body>
+<h1>Ułóż mozaikę</h1>
+<div id="help" style="height: 100px">
+</div>
 <div id="root"></div>
+<div id="status" style="height: 12px; font-size: 12px; margin: 16px 0;"></div>
+<button id="next" >Następny</button>
 </body>
 </html>
