--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <script
             src="index.js"
     ></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
 <h1>Ułóż mozaikę</h1>
